--- a/Api Opgave/Swapi/style.css
+++ b/Api Opgave/Swapi/style.css
@@ -17,6 +17,7 @@
     background: url(/pictures/StarWarsMedium.jpg);
     background-size: cover;
     background-position: 50% 50%;
+    justify-content: center;
 
 }
 
@@ -82,8 +83,6 @@
     height: 150px;
     color: white;
     position: absolute;
-    left: 350px;
-    top: 300px;
     font-family: Trebuchet MS;
     font-size: 5em;
     text-anchor: middle;
@@ -91,6 +90,8 @@
     font-weight:bold;
     opacity: 0;
     animation:loadingAnimation 3s infinite;
+    align-self: center;
+    margin-left:-400px;
   }
 
   @keyframes loadingAnimation{
